@@ -1,6 +1,7 @@
 from trytond.pool import Pool
 from .contract import *
 from .rule_engine import *
+from .event import *
 
 
 def register():
@@ -11,6 +12,7 @@ def register():
         ContractSetSelectDeclineReason,
         ReportTemplate,
         Configuration,
+        Event,
         module='contract_set', type_='model')
     Pool.register(
         ContractSetDecline,
