@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+<tryton>
+    <data>
+        <record model="event.type" id="event_activate_contract_set">
+            <field name="name">Activate Contract Set</field>
+            <field name="code">activate_contract_set</field>
+        </record>
+    </data>
+</tryton>
