@@ -9,3 +9,4 @@ xml:
     contract.xml
     rule_engine.xml
     report.xml
+    event_type.xml
