@@ -7,3 +7,4 @@ depends:
     party
 xml:
     report_engine.xml
+    event.xml
