@@ -1,3 +1,4 @@
+* Allow to define report templates to be printed at given event
 * Add option to export the document on generation to the server filesystem
 * Add option to store the original generated document in the internal edm even if the final output is converted to pdf
 * Make conversion to pdf optional for automatic generation of documents
